<resources>
    <string name="app_name">BookSearch</string>
    <string name="version_number">v 0.420</string>


    <!--    used in fragment_book_view -->
    <string name="avg_rating">Rating</string>
    <string name="num_reviews">Reviews</string>
    <string name="num_pages">Pages</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="empty_generic_placeholder">--</string>
    <string name="save_book">Add</string>
    <string name="saved">Added</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>
    <string name="read_preview">Preview</string>
    <string name="about">About:</string>
    <string name="show_more">show more</string>
    <string name="show_less">show less</string>
    <string name="categories">Categories</string>
    <string name="notes">Your Note</string>
    <string name="book_info">book information</string>
    <string name="open_google_play">open in play store</string>
    <string name="snackbar_book_removed">Book Removed From List</string>
    <string name="undo_remove">UNDO</string>

    <string name="note_stub">---You added this book on %1$s---</string>

    <!--    used in search fragment-->
    <string name="search_everywhere">Everywhere</string>
    <string name="search_by_title">By Title</string>
    <string name="search_by_author">By Author</string>
    <string name="search_by_publisher">By Publisher</string>
    <string name="search_by_subject">By Subject</string>
    <string name="empty_list">Welcome Back</string>
    <string name="no_books_found">No Books Found</string>
    <string name="search_hint">Search books…</string>
    <string name="no_internet_snack">No Internet Connection</string>
    <string name="book_saved_snack">Added to Saved List</string>

    <!--    used in edit note activity-->
    <string name="edit_note_hint">Note</string>
    <string name="save_note">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_note_label">Edit note for this book</string>

    <!--    used in saved fragment-->
    <string name="empty_list_text">No Added Books</string>

    <!--    used in info activity-->
    <string name="book_info_placeholder">-</string>
    <string name="book_info_label">Book information</string>
    <string name="book_author_info_label">Author</string>
    <string name="book_publisher_info_label">Publisher</string>
    <string name="book_publish_date_info_label">Publication date</string>
    <string name="book_pages_info_label">Pages</string>
    <string name="book_isbn10_info_label">ISBN 10</string>
    <string name="book_isbn13_info_label">ISBN 13</string>
    <string name="book_info_language_label">Language</string>

</resources>






















