<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditNoteActivity">

    <Button
            android:id="@+id/cancel_note_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_ripple"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_background"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_mid"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
            android:id="@+id/save_note_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_ripple"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/save_note"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_background"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_note_btn"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_mid" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style='style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"'
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_frame_for_categories"
            android:padding="4dp"
            app:boxStrokeColor="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_note_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>