<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/thumbnail_iv"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/image_background"
            android:elevation="2dp"
            android:scaleType="fitXY"
            android:transitionName="book_thumb_transition"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/colorAccent" />

    <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:lineSpacingMultiplier="@dimen/material_emphasis_high_type"
            android:textColor="@android:color/background_dark"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/thumbnail_iv"
            app:layout_constraintTop_toTopOf="@+id/thumbnail_iv"
            tools:text="What Do You Say After You Say Hello" />

    <TextView
            android:id="@+id/author_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/title_tv"
            app:layout_constraintStart_toStartOf="@+id/title_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            tools:text="Eric Berne" />

    <TextView
            android:id="@+id/publisher_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/author_tv"
            app:layout_constraintStart_toStartOf="@+id/author_tv"
            app:layout_constraintTop_toBottomOf="@+id/author_tv"
            tools:text="Random House" />

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="publisher_tv,thumbnail_iv"
            tools:layout_editor_absoluteX="411dp"
            tools:layout_editor_absoluteY="166dp" />

    <TextView
            android:id="@+id/rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:minWidth="50dp"
            android:text="@string/empty_generic_placeholder"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/num_reviews_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            tools:text="4.5" />

    <TextView
            android:id="@+id/num_pages_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="50dp"
            android:text="@string/empty_generic_placeholder"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/num_reviews_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/num_reviews_tv"
            tools:text="450" />

    <TextView
            android:id="@+id/num_reviews_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="50dp"
            android:text="@string/empty_generic_placeholder"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/rating_tv"
            app:layout_constraintEnd_toStartOf="@+id/num_pages_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rating_tv"
            tools:text="9" />

    <TextView
            android:id="@+id/rating_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/avg_rating"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/rating_tv"
            app:layout_constraintStart_toStartOf="@+id/rating_tv"
            app:layout_constraintTop_toBottomOf="@+id/rating_tv" />

    <TextView
            android:id="@+id/reviews_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/num_reviews"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/num_reviews_tv"
            app:layout_constraintStart_toStartOf="@+id/num_reviews_tv"
            app:layout_constraintTop_toBottomOf="@+id/num_reviews_tv" />

    <TextView
            android:id="@+id/pages_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/num_pages"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/num_pages_tv"
            app:layout_constraintStart_toStartOf="@+id/num_pages_tv"
            app:layout_constraintTop_toBottomOf="@+id/num_pages_tv" />

    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/rating_label_tv" />

    <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/barrier3" />

    <TextView
            android:id="@+id/preview_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_for_savebutton"
            android:backgroundTint="@color/color_buttons"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/read_preview"
            android:textColor="@color/design_default_color_background"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_center"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
            android:id="@+id/save_book_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_for_savebutton"
            android:backgroundTint="@color/color_buttons"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/save_book"
            android:textColor="@color/design_default_color_background"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/preview_tv"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_center" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/preview_tv" />

    <at.blogc.android.views.ExpandableTextView
            android:id="@+id/expendable_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/empty_generic_placeholder"
            app:animation_duration="300"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
            android:id="@+id/showmore_tv"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_for_savebutton"
            android:backgroundTint="@color/color_buttons"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/show_more"
            android:textColor="@color/design_default_color_background"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/expendable_text_view" />

    <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/showmore_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/showmore_tv" />

    <TextView
            android:id="@+id/categories_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/background_frame_for_categories"
            android:inputType="textMultiLine"
            android:outlineProvider="bounds"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/categories_label"
            tools:text="Sci-Fi, Romance, Comedy, Thriller, History" />

    <TextView
            android:id="@+id/categories_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="?android:colorBackground"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/categories"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/showmore_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>